used svh to stop structure dynamically resizing on mobile

--- a/style.css
+++ b/style.css
@@ -227,7 +227,7 @@ h2:target + p{
 
 .structure {
 	height: 60vh;
-	height: 60dvh;
+	height: 60svh;
 	width:100%;
 	box-sizing: border-box;
 	padding:7px;
